# self-evolving-memory

./: .gitignore  Cargo.toml  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml  memory.db
docs/: USAGE.md
migrations/: 001_init.sql  001_sqlite_init.sql  002_pgvector.sql
sdk/python/: pyproject.toml
sdk/python/self_evolving_memory/: __init__.py  client.py  exceptions.py  models.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/file/: extractor.rs  mod.rs  vision.rs
src/mcp/: mod.rs  resources.rs  server.rs  tools.rs
src/memory/: consolidation.rs  embedding.rs  mod.rs  pool.rs  postgres.rs  spreading.rs  sqlite.rs  store.rs  types.rs  vector.rs
tests/: memory_tests.rs
web-ui/: Dockerfile.web  index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css
web-ui/src/api/: client.ts
web-ui/src/pages/: Dashboard.tsx  MemoryDetail.tsx  MemoryList.tsx  MemorySearch.tsx  NewMemory.tsx
