[package]
name = "self_evolving_memory"
version = "0.1.0"
edition = "2021"
description = "AI Agent Memory System - Production-grade memory infrastructure"
license = "MIT"

[[bin]]
name = "mem"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.6"
axum-extra = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.4", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.10"
log = "0.4"
tracing = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal output
colored = "2"
tabled = "0.15"

# Async trait
async-trait = "0.1"

# HTTP client (for embeddings)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# File handling
tempfile = "3"

# Base64 encoding (for image processing)
base64 = "0.21"

# Environment variables
dotenvy = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

[dev-dependencies]
tokio-test = "0.4"