[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-evolving-memory"
version = "0.1.0"
description = "Python SDK for Self-Evolving Memory System"
readme = "README.md"
license = "MIT"
authors = [
    {name = "OpenClaw Team", email = "team@openclaw.ai"}
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/openclaw/self-evolving-memory"
Documentation = "https://docs.openclaw.ai/memory"
Repository = "https://github.com/openclaw/self-evolving-memory"
Issues = "https://github.com/openclaw/self-evolving-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["self_evolving_memory"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true